# ArborPFA

./: CMakeLists.txt
docs/: about.html  documentation.html  download.html  index.html  index.md  references.html
docs/base/: footer.html  header.html  navigation.html
docs/documentation/doxygen/latest/: index.html
docs/documentation/doxygen/latest/ArborContent/html/: AlgorithmConfiguration_8cc.html  AlgorithmConfiguration_8h.html  AlgorithmConfiguration_8h_source.html  ArborBFieldPlugin_8cc.html  ArborBFieldPlugin_8h.html  ArborBFieldPlugin_8h_source.html  ArborClusteringAlgorithm_8cc.html  ArborClusteringAlgorithm_8cc_source.html  ArborContentApi_8cc.html  ArborContentApi_8cc_source.html  ArborContent_8h.html  ArborMetaData_8cc.html  ArborPseudoLayerPlugin_8h.html  ArborPseudoLayerPlugin_8h_source.html  Branch_8cc.html  CaloHitHelper_8cc.html  CaloHitHelper_8cc_source.html  CaloHitHelper_8h_source.html  CaloHitMergingTool_8cc.html  CaloHitPreparationAlgorithm_8cc.html  CaloHitPreparationAlgorithm_8cc_source.html  CaloHitPreparationAlgorithm_8h.html  CaloHitPreparationAlgorithm_8h_source.html  CaloHit_8cc_source.html  CaloHit_8h.html  CheatingTrackToClusterMatching_8h.html  ClosebySeedMergingAlgorithm_8h_source.html  ClusterFragmentMergingAlgorithm_8cc.html  ClusterFragmentMergingAlgorithm_8cc_source.html  ClusterHelper_8cc.html  ClusterHelper_8h.html  ClusterHelper_8h_source.html  ClusterPreparationAlgorithm_8cc.html  ClusterPreparationAlgorithm_8cc_source.html  ClusterPreparationAlgorithm_8h.html  ClusterPreparationAlgorithm_8h_source.html  CompositeAlgorithm_8h_source.html  ConnectorAlgorithmTool_8h_source.html  ConnectorAlignmentTool_8cc.html  ConnectorAlignmentTool_8h_source.html  (+222 more)
docs/documentation/doxygen/latest/ArborContent/latex/: ArborClusteringAlgorithm_8h.tex  ArborContent_8h.tex  ArborPseudoLayerPlugin_8h.tex  CaloHitHelper_8cc.tex  CaloHitHelper_8h.tex  ClosebySeedMergingAlgorithm_8cc.tex  ClusteringParentAlgorithm_8h.tex  ConnectorCleaningTool_8cc.tex  ConnectorSeedingTool_8cc.tex  Connector_8cc.tex  EnergyExcessReclusteringAlgorithm_8cc.tex  EventPreparationAlgorithm_8cc.tex  FinalParticleIdAlgorithm_8h.tex  FragmentRemovalAlgorithm_8cc.tex  FragmentRemovalAlgorithm_8h.tex  GeometryHelper_8cc.tex  GeometryHelper_8h.tex  ListChangingAlgorithm_8h.tex  ListMergingAlgorithm_8cc.tex  MipFragmentMergingAlg_8cc.tex  MissingEnergyReclusteringAlgorithm_8cc.tex  MissingEnergyReclusteringAlgorithm_8h.tex  ObjectFactories_8cc.tex  ParticleIdPlugins_8cc.tex  PerfectClusteringAlgorithm_8h.tex  PerformanceMonitoringAlgorithm_8h.tex  PhotonReconstructionAlgorithm_8h.tex  PointingClusterAssociationAlgorithm_8cc.tex  SingleParticleMonitoringAlgorithm_8cc.tex  SplitTrackReclusteringAlgorithm_8cc.tex  SurroundingHitsMergingAlgorithm_8h.tex  TopologicalAssociationParentAlgorithm_8h.tex  TrackClusterAssociationAlgorithm_8h.tex  TrackDrivenSeedingTool_8cc.tex  TrackPreparationAlgorithm_8h.tex  UnassociatedTrackRecoveryAlg_8cc.tex  UnassociatedTrackRecoveryAlg_8h.tex  VisualMonitoringAlgorithm_8h.tex  annotated.tex  classarbor__content_1_1AlgorithmObjectListMergingAlgorithm.eps  (+76 more)
docs/documentation/doxygen/latest/MarlinArbor/html/: ArborPFAProcessor_8cc.html  ArborPFAProcessor_8h_source.html  ExternalClusteringAlgorithm_8h_source.html  classmarlin__arbor_1_1CaloHitCreator.html  classmarlin__arbor_1_1ExternalClusteringAlgorithm-members.html  classmarlin__arbor_1_1ExternalClusteringAlgorithm.html  classmarlin__arbor_1_1ExternalClusteringAlgorithm_1_1Factory.html  classmarlin__arbor_1_1GeometryCreator_1_1Settings.html  classmarlin__arbor_1_1MCParticleCreator.html  classmarlin__arbor_1_1PfoCreator.html  classmarlin__arbor_1_1PfoCreator_1_1Settings.html  classmarlin__arbor_1_1TrackCreator.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html
docs/documentation/doxygen/latest/PandoraMonitoring/html/: PandoraMonitoring_8h_source.html  TTreeWrapper_8h.html  TTreeWrapper_8h_source.html  classPandoraMonitoringApi.html  classpandora__monitoring_1_1TTreeWrapper.html  classpandora__monitoring_1_1TTreeWrapper_1_1Branch-members.html  classpandora__monitoring_1_1TTreeWrapper_1_1Branch.html  classpandora__monitoring_1_1TTreeWrapper_1_1BranchInsertError.html  classpandora__monitoring_1_1TTreeWrapper_1_1Branch_1_1BadType.html  classpandora__monitoring_1_1TTreeWrapper_1_1TreeInsertError.html  dir_d44c64559bbebec7f509842c48db8b23.html  functions.html  globals.html  globals_defs.html  globals_enum.html
docs/documentation/doxygen/latest/PandoraSDK/html/: AlgorithmManager_8cc.html  AlgorithmManager_8h.html  AlgorithmManager_8h_source.html  AlgorithmObjectManager_8h_source.html  AlgorithmTool_8h.html  Algorithm_8h.html  BFieldPlugin_8h.html  BinaryFileWriter_8h.html  BinaryFileWriter_8h_source.html  CaloHitManager_8h_source.html  CaloHit_8h.html  CartesianVector_8cc.html  ClusterManager_8h_source.html  Cluster_8cc.html  Cluster_8h.html  DetectorGap_8cc.html  DetectorGap_8h.html  EnergyCorrectionsPlugin_8h_source.html  EventReadingAlgorithm_8cc.html  EventReadingAlgorithm_8h_source.html  EventWritingAlgorithm_8h.html  EventWritingAlgorithm_8h_source.html  FileReader_8h_source.html  Histograms_8cc.html  Histograms_8h_source.html  MCManager_8cc.html  MCManager_8h_source.html  MCParticleHelper_8h_source.html  Manager_8h.html  ObjectParameters_8h.html  OrderedCaloHitList_8cc.html  OrderedCaloHitList_8h_source.html  PandoraApiImpl_8h.html  PandoraApi_8h.html  PandoraContentApi_8cc.html  PandoraContentApi_8h_source.html  PandoraEnumeratedTypes_8h.html  PandoraEnumeratedTypes_8h_source.html  PandoraIO_8h_source.html  PandoraImpl_8h.html  (+193 more)
docs/documentation/doxygen/v02-05-01/ArborContent/html/: AlgorithmConfiguration_8cc_source.html  ArborBFieldPlugin_8cc_source.html  ArborClusteringAlgorithm_8h.html  ArborClusteringAlgorithm_8h_source.html  ArborContentApi_8h.html  ArborContentApi_8h_source.html  ArborContent_8h_source.html  ArborInputTypes_8h.html  ArborInputTypes_8h_source.html  ArborMetaData_8cc_source.html  (+282 more)
docs/stylesheets/: stylesheet.css
(+1702 files in other folders)
